--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -168,18 +168,17 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4"
-            android:layout_gravity="top"
-            >
+            android:layout_gravity="top">
             <ImageButton
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/default_user"
-                android:background="#FFF"
-                android:adjustViewBounds="false"
+                android:adjustViewBounds="true"
                 android:focusableInTouchMode="false"
-                android:scaleType="centerCrop"
+                android:scaleType="centerInside"
                 android:layout_gravity="top"
-                android:id="@+id/clickable_image"/>
+                android:id="@+id/clickable_image"
+                android:background="@drawable/image_border" />
         </FrameLayout>
 
         <LinearLayout
@@ -193,7 +192,7 @@
                 android:layout_height="wrap_content"
                 android:text="Tap on the above image to request a user picture."
                 android:layout_gravity="center_horizontal"
-                android:textSize="9sp"
+                android:textSize="12sp"
                 android:textColor="@color/android_grey"
                 android:id="@+id/tap_image_text" />
             <TextView
