--- a/app/src/main/res/layout/my_photo_layout.xml
+++ b/app/src/main/res/layout/my_photo_layout.xml
@@ -90,17 +90,29 @@ android:gravity="right">
             android:background="@drawable/image_border"
             android:adjustViewBounds="true" />
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Lakmal Caldera"
             android:id="@+id/sender"
             android:layout_alignParentEnd="false"
             android:layout_alignParentBottom="false"
             android:textColor="@color/black"
-            android:textStyle="italic"
-            android:textSize="12sp"
+            android:textStyle="bold|italic"
+            android:textSize="15sp"
             android:layout_alignLeft="@+id/my_image"
             android:layout_below="@+id/my_image" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="11:00 AM"
+                android:id="@+id/sent_time"
+                android:layout_alignParentEnd="false"
+                android:layout_alignParentBottom="false"
+                android:textColor="@color/android_grey"
+                android:textStyle="italic"
+                android:textSize="9sp"
+                android:layout_alignLeft="@+id/my_image"
+                android:layout_below="@+id/sender" />
         </LinearLayout>
     </RelativeLayout>
 </FrameLayout>
