--- a/app/src/main/res/layout/not_my_message_layout.xml
+++ b/app/src/main/res/layout/not_my_message_layout.xml
@@ -106,7 +106,7 @@
                 android:textSize="15dp"
                 android:gravity="left" />
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Lakmal Caldera"
                 android:id="@+id/sender"
@@ -114,9 +114,21 @@
                 android:layout_alignParentBottom="false"
                 android:textColor="@color/black"
                 android:layout_below="@+id/message"
-                android:textStyle="italic"
-                android:textSize="12dp"
+                android:textStyle="bold|italic"
+                android:textSize="15dp"
                 android:layout_alignLeft="@+id/message" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="11:00 AM"
+                android:id="@+id/sent_time"
+                android:layout_alignParentEnd="false"
+                android:layout_alignParentBottom="false"
+                android:textColor="@color/android_grey"
+                android:textStyle="italic"
+                android:textSize="9sp"
+                android:layout_alignLeft="@+id/sender"
+                android:layout_below="@+id/sender" />
 
         </RelativeLayout>
     </FrameLayout>
