--- a/app/src/main/res/layout/not_my_photo_layout.xml
+++ b/app/src/main/res/layout/not_my_photo_layout.xml
@@ -114,17 +114,17 @@
                     android:layout_gravity="left"
                     android:background="@color/android_green">-->
 
-                    <ImageView
-                        android:id="@+id/not_my_image"
-                        android:layout_width="200dp"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/default_user"
-                        android:adjustViewBounds="true"
-                        android:cropToPadding="false"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:background="@drawable/image_border"
-                        android:scaleType="centerCrop" />
+                <ImageView
+                    android:id="@+id/not_my_image"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:adjustViewBounds="true"
+                    android:background="@drawable/image_border"
+                    android:cropToPadding="false"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/default_user" />
                 <!--</LinearLayout>-->
 
                 <FrameLayout
@@ -137,7 +137,26 @@
                         android:layout_height="wrap_content"
                         android:text="Lakmal Caldera"
                         android:textColor="@color/black"
-                        android:textSize="12sp"
+                        android:textSize="15sp"
+                        android:textStyle="bold|italic" />
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/sent_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignLeft="@+id/sender"
+                        android:layout_alignParentBottom="false"
+                        android:layout_alignParentEnd="false"
+                        android:layout_below="@+id/sender"
+                        android:text="11:00 AM"
+                        android:textColor="@color/android_grey"
+                        android:textSize="9sp"
                         android:textStyle="italic" />
                 </FrameLayout>
             </LinearLayout>
