--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -1,162 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorPrimary" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        tools:context="com.score.chatz.ui.UserProfileActivity"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_alignParentTop="true">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4"
-            android:layout_gravity="top">
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/default_user"
-                android:background="@color/black"
-                android:adjustViewBounds="false"
-                android:focusableInTouchMode="false"
-                android:scaleType="centerCrop"
-                android:layout_gravity="top" />
-        </FrameLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            android:layout_weight="6">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/user_name"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="40dp"
-                android:layout_marginRight="40dp"
-                android:text="Lakmal"
-                android:textSize="20dp"
-                android:gravity="center_horizontal" />
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="40dp"
-                android:background="@color/android_green"
-                android:text="Share a secret!"
-                android:textColor="@color/android_grey" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="40dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp">
-
-                    <ImageView
-                        android:id="@+id/perm_locations"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:maxWidth="20dp"
-                        android:layout_weight="2"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/perm_locations_active"
-                        android:baselineAlignBottom="false"
-                        android:layout_gravity="center_vertical" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="6"
-                        android:text="@string/perm_location"
-                        android:textColor="@color/white"
-                        android:textSize="13dp"
-                        android:layout_marginLeft="10dp" />
-
-                    <Switch
-                        android:id="@+id/perm_location_switch"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="5"
-                        android:layout_marginLeft="40dp" />
-
-
-
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp">
-
-                    <ImageView
-                        android:id="@+id/perm_camera"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:maxWidth="20dp"
-                        android:layout_weight="2"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/perm_camera_active"
-                        android:baselineAlignBottom="false"
-                        android:layout_gravity="center_vertical" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="6"
-                        android:text="@string/perm_camera"
-                        android:textColor="@color/white"
-                        android:textSize="13dp"
-                        android:layout_marginLeft="10dp" />
-
-                    <Switch
-                        android:id="@+id/perm_camera_switch"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="5"
-                        android:layout_marginLeft="40dp" />
-                </LinearLayout>
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-
-
-</RelativeLayout>-->
-
-
-    <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-        tools:context="com.score.chatz.ui.UserProfileActivity"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_alignParentTop="true">
+    android:layout_alignParentTop="true"
+    android:background="@color/white"
+    android:orientation="vertical"
+    tools:context="com.score.chatz.ui.UserProfileActivity">
 
     <!--<android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -164,145 +15,146 @@
         android:layout_height="45dp"
         android:background="@android:color/transparent" />-->
 
-        <FrameLayout
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="top"
+        android:layout_weight="4">
+
+        <ImageView
+            android:id="@+id/clickable_image"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4"
-            android:layout_gravity="top">
-            <ImageButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/default_user"
-                android:adjustViewBounds="true"
-                android:focusableInTouchMode="false"
-                android:scaleType="centerInside"
-                android:layout_gravity="top"
-                android:id="@+id/clickable_image"
-                android:background="@drawable/image_border" />
-        </FrameLayout>
+            android:layout_height="match_parent"
+            android:layout_gravity="top"
+            android:adjustViewBounds="true"
+            android:background="@drawable/image_border"
+            android:focusableInTouchMode="false"
+            android:scaleType="centerInside"
+            android:src="@drawable/default_user" />
+    </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="6"
+        android:background="#FFF"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tap_image_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Tap on the above image to request a user picture."
+            android:textColor="@color/android_grey"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
+            android:text="Lakmal"
+            android:textColor="@color/android_grey"
+            android:textSize="20dp" />
+
+        <Button
+            android:id="@+id/share_secret_btn"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/android_green"
+            android:text="Share a secret!"
+            android:textColor="@color/android_grey" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            android:layout_weight="6"
-            android:background="#FFF">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tap on the above image to request a user picture."
-                android:layout_gravity="center_horizontal"
-                android:textSize="12sp"
-                android:textColor="@color/android_grey"
-                android:id="@+id/tap_image_text" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/user_name"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="40dp"
-                android:text="Lakmal"
-                android:textSize="20dp"
-                android:gravity="center_horizontal"
-                android:textColor="@color/android_grey" />
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="40dp"
-                android:background="@color/android_green"
-                android:text="Share a secret!"
-                android:id="@+id/share_secret_btn"
-                android:textColor="@color/android_grey" />
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="40dp"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="280dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="40dp">
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <ImageView
+                    android:id="@+id/perm_locations"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp">
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="5"
+                    android:adjustViewBounds="true"
+                    android:baselineAlignBottom="false"
+                    android:maxWidth="20dp"
+                    android:src="@drawable/perm_locations_active" />
 
-                    <ImageView
-                        android:id="@+id/perm_locations"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:maxWidth="20dp"
-                        android:layout_weight="5"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/perm_locations_active"
-                        android:baselineAlignBottom="false"
-                        android:layout_gravity="center_vertical" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:text="@string/perm_location"
-                        android:textColor="@color/android_grey"
-                        android:textSize="13dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_gravity="center_vertical" />
-
-                    <Switch
-                        android:id="@+id/perm_location_switch"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="26"
-                        android:layout_marginLeft="10dp"
-                        android:layout_gravity="center_vertical" />
-
-
-
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp">
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:text="@string/perm_location"
+                    android:textColor="@color/android_grey"
+                    android:textSize="13dp" />
 
-                    <ImageView
-                        android:id="@+id/perm_camera"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:maxWidth="20dp"
-                        android:layout_weight="5"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/perm_camera_active"
-                        android:baselineAlignBottom="false"
-                        android:layout_gravity="center_vertical" />
+                <Switch
+                    android:id="@+id/perm_location_switch"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="26" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:text="@string/perm_camera"
-                        android:textColor="@color/android_grey"
-                        android:textSize="13dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_gravity="center_vertical" />
 
-                    <Switch
-                        android:id="@+id/perm_camera_switch"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="26"
-                        android:layout_marginLeft="10dp"
-                        android:layout_gravity="center_vertical" />
-                </LinearLayout>
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/perm_camera"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="5"
+                    android:adjustViewBounds="true"
+                    android:baselineAlignBottom="false"
+                    android:maxWidth="20dp"
+                    android:src="@drawable/perm_camera_active" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:text="@string/perm_camera"
+                    android:textColor="@color/android_grey"
+                    android:textSize="13dp" />
+
+                <Switch
+                    android:id="@+id/perm_camera_switch"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="26" />
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
+
+</LinearLayout>
 
