--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -152,6 +152,42 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="26" />
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/perm_mic"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="5"
+                    android:adjustViewBounds="true"
+                    android:baselineAlignBottom="false"
+                    android:maxWidth="20dp"
+                    android:src="@drawable/perm_mic_active" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="3"
+                    android:text="@string/perm_mic"
+                    android:textColor="@color/android_grey"
+                    android:textSize="13dp" />
+
+                <Switch
+                    android:id="@+id/perm_mic_switch"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="26" />
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
