--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -163,7 +163,7 @@
                     android:layout_gravity="center_vertical"
                     android:background="@drawable/chat_message_btn" />
 
-                <ImageButton
+                <!--<ImageButton
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:src="@drawable/microphone"
@@ -174,7 +174,7 @@
                     android:baselineAlignBottom="false"
                     android:id="@+id/micBtn"
                     android:layout_gravity="center_vertical"
-                    android:background="@drawable/chat_message_btn" />
+                    android:background="@drawable/chat_message_btn" />-->
 
             </LinearLayout>
 
@@ -220,6 +220,21 @@
                         android:adjustViewBounds="true"
                         android:scaleType="centerInside"
                         android:id="@+id/getCamBtn"
+                        android:layout_gravity="top"
+                        android:backgroundTint="#ecf0f1" />
+                </FrameLayout>
+
+                <FrameLayout
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content">
+                    <ImageButton
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/perm_mic_deactive"
+                        android:background="@drawable/chat_message_btn_disabled"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerInside"
+                        android:id="@+id/getMicBtn"
                         android:layout_gravity="top"
                         android:backgroundTint="#ecf0f1" />
                 </FrameLayout>
