--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,9 +20,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="top"
-        android:layout_weight="4">
+        android:layout_weight="4"
+        android:background="#ededed">
 
-        <ImageView
+        <!--<ImageView
             android:id="@+id/clickable_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -30,7 +32,18 @@
             android:background="@drawable/image_border"
             android:focusableInTouchMode="false"
             android:scaleType="centerInside"
-            android:src="@drawable/default_user" />
+            android:src="@drawable/default_user" />-->
+
+        <com.github.siyamed.shapeimageview.CircularImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/default_user"
+            android:id="@+id/clickable_image"
+            android:adjustViewBounds="true"
+            android:cropToPadding="true"
+            app:siBorderAlpha = "0.0"
+            android:layout_gravity="center" />
+
     </FrameLayout>
 
     <LinearLayout
