--- a/app/src/main/res/layout/my_message_layout.xml
+++ b/app/src/main/res/layout/my_message_layout.xml
@@ -1,76 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="right">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="15dp">
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/message_container"
-            android:padding="10dp"
-            android:background="@drawable/my_message_background"
-            android:layout_alignParentStart="true">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Hi This is a message"
-                android:textColor="@color/black"
-                android:id="@+id/message"
-                android:textSize="15dp"
-                android:gravity="left" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Lakmal Caldera"
-                android:id="@+id/sender"
-                android:layout_alignParentEnd="false"
-                android:layout_alignParentBottom="false"
-                android:textColor="@color/black"
-                android:layout_below="@+id/message"
-                android:textStyle="italic"
-                android:textSize="12dp"
-                android:gravity="left" />
-
-        </RelativeLayout>
-
-    </RelativeLayout>
-</RelativeLayout>-->
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal"
-    android:background="@color/white"
-    android:gravity="right">
-    <FrameLayout
-        android:layout_width="10dp"
-        android:layout_height="match_parent"
-        android:background="@color/android_green"
-        android:layout_margin="5dp"></FrameLayout>
+    android:orientation="vertical"
+    android:background="@color/white">
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp">
+        android:layout_height="wrap_content">
+
         <RelativeLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:paddingLeft="5dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Lakmal Caldera"
+            android:id="@+id/sender"
+            android:textColor="@color/black"
+            android:textSize="13dp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="11:00 AM"
+            android:id="@+id/sent_time"
+            android:textColor="@color/android_grey"
+            android:textStyle="italic"
+            android:textSize="9sp"
+            android:layout_alignLeft="@+id/sender"
+            android:layout_below="@+id/sender" />
+
+        </RelativeLayout>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/message_container"
-            android:padding="10dp"
-            android:layout_alignParentStart="true">
+            android:orientation="horizontal">
+            <FrameLayout
+                android:layout_width="3dp"
+                android:layout_height="match_parent"
+                android:background="@color/android_green"
+                android:layout_margin="5dp">
+
+            </FrameLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -78,32 +59,12 @@
                 android:textColor="@color/black"
                 android:id="@+id/message"
                 android:textSize="15dp"
-                android:gravity="left" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Lakmal Caldera"
-                android:id="@+id/sender"
-                android:layout_alignParentEnd="false"
-                android:layout_alignParentBottom="false"
-                android:textColor="@color/black"
-                android:layout_below="@+id/message"
-                android:textStyle="bold|italic"
-                android:textSize="15dp"
-                android:layout_alignLeft="@+id/message" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="11:00 AM"
-                android:id="@+id/sent_time"
-                android:layout_alignParentEnd="false"
-                android:layout_alignParentBottom="false"
-                android:textColor="@color/android_grey"
-                android:textStyle="italic"
-                android:textSize="9sp"
-                android:layout_alignLeft="@+id/sender"
-                android:layout_below="@+id/sender" />
-
-        </RelativeLayout>
+                android:gravity="left"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="15dp" />
+        </LinearLayout>
     </FrameLayout>
+
 </LinearLayout>
