--- a/app/src/main/res/layout/not_my_message_layout.xml
+++ b/app/src/main/res/layout/not_my_message_layout.xml
@@ -1,80 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-    android:gravity="right">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_alignParentRight="false"
-        android:gravity="right"
-        android:layout_alignParentStart="false">
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/message_container"
-            android:padding="10dp"
-            android:background="@drawable/not_my_message_background"
-            android:layout_alignParentEnd="true">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="l"
-            android:textColor="@color/black"
-            android:id="@+id/message"
-            android:textSize="15dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Lakmal Caldera"
-            android:id="@+id/sender"
-            android:layout_alignParentEnd="false"
-            android:layout_alignParentBottom="false"
-            android:textColor="@color/black"
-            android:layout_below="@+id/message"
-            android:textStyle="italic"
-            android:textSize="12dp" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_below="@+id/message_container"
-            android:layout_alignParentEnd="true"
-            android:layout_alignLeft="@+id/message_container"
-            android:layout_alignStart="@+id/message_container"
-            android:visibility="gone">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/seen"
-            android:id="@+id/see_icon"
-            android:contentDescription="@string/see_icon" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/chat_seen"
-            android:layout_toRightOf="@+id/see_icon"
-            android:layout_marginLeft="10dp"
-            android:layout_centerVertical="true" />
-
-        </RelativeLayout>
-
-    </RelativeLayout>
-</RelativeLayout>-->
-
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal"
@@ -132,4 +57,80 @@
 
         </RelativeLayout>
     </FrameLayout>
+</LinearLayout>-->
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="@color/white">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingRight="5dp"
+            android:paddingTop="5dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Lakmal Caldera"
+                android:id="@+id/sender"
+                android:textColor="@color/black"
+                android:textSize="13dp"
+                android:layout_alignParentEnd="false"
+                android:layout_alignParentRight="false"
+                android:layout_alignParentStart="false"
+                android:gravity="right" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="11:00 AM"
+                android:id="@+id/sent_time"
+                android:textColor="@color/android_grey"
+                android:textStyle="italic"
+                android:textSize="9sp"
+                android:layout_below="@+id/sender"
+                android:layout_alignRight="@+id/sender" />
+
+        </RelativeLayout>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Hi This is a message"
+                android:textColor="@color/black"
+                android:id="@+id/message"
+                android:textSize="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="15dp"
+                android:layout_weight="1"
+                android:gravity="right" />
+            <FrameLayout
+                android:layout_width="3dp"
+                android:layout_height="match_parent"
+                android:background="@color/android_grey"
+                android:layout_margin="5dp">
+
+            </FrameLayout>
+        </LinearLayout>
+    </FrameLayout>
+
 </LinearLayout>
