--- a/app/src/main/res/layout/rahas_row_layout.xml
+++ b/app/src/main/res/layout/rahas_row_layout.xml
@@ -14,33 +14,45 @@
     android:baselineAligned="false">
 
     <FrameLayout
-        android:layout_width="0dp"
+        android:layout_width="80dp"
         android:layout_height="match_parent"
-        android:layout_weight="4"
         android:padding="10dp">
 
         <com.github.siyamed.shapeimageview.CircularImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:src="@drawable/default_user"
             android:id="@+id/user_image"
-            app:siBorderWidth="1dp"
-            android:layout_gravity="center" />
+            app:siBorderWidth="0dp"
+            android:layout_gravity="center"
+            android:adjustViewBounds="true"
+            android:cropToPadding="true"
+            app:siSquare="true"
+            app:siBorderAlpha = "0.0"/>
 
     </FrameLayout>
 
     <FrameLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="8">
+        android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp"
-        android:gravity="center_vertical">
+        android:layout_height="0dp"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
+        android:paddingTop="0dp"
+        android:layout_weight="1">
 
-        <TextView
+        <!--<TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Secret"
@@ -68,10 +80,58 @@
             android:textStyle="italic"
             android:textSize="9sp"
             android:layout_alignLeft="@+id/sender"
-            android:layout_below="@+id/sender" />
+            android:layout_below="@+id/sender" />-->
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lakmal"
+            android:id="@+id/sender"
+            android:layout_centerVertical="true"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="10dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="11:00 AM"
+            android:id="@+id/sent_time"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentBottom="false"
+            android:textColor="@color/android_grey"
+            android:textSize="9sp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="5dp"
+            android:layout_alignBottom="@+id/sender" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Secret"
+            android:id="@+id/message"
+            android:layout_centerVertical="true"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentBottom="false"
+            android:layout_below="@+id/sender"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textSize="13sp" />
+
+
 
 
     </RelativeLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@drawable/bottom_border"></FrameLayout>
+
+        </LinearLayout>
     </FrameLayout>
 
 </LinearLayout>
