--- a/app/src/main/res/layout/single_user_card_row.xml
+++ b/app/src/main/res/layout/single_user_card_row.xml
@@ -8,26 +8,39 @@ android:layout_height="match_parent"
     android:baselineAligned="false">
 
 <FrameLayout
-    android:layout_width="0dp"
+    android:layout_width="80dp"
     android:layout_height="match_parent"
-    android:layout_weight="4"
     android:padding="10dp">
 
     <com.github.siyamed.shapeimageview.CircularImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
         android:src="@drawable/default_user"
         android:id="@+id/user_image"
-        app:siBorderWidth="1dp"
-        android:layout_gravity="center" />
+        app:siBorderWidth="0dp"
+        android:layout_gravity="center"
+        android:adjustViewBounds="true"
+        android:cropToPadding="true"
+        app:siSquare="true"
+        app:siBorderAlpha = "0.0" />
 
 </FrameLayout>
 
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
         android:layout_weight="8"
-        android:padding="10dp">
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:padding="10dp"
+        android:layout_weight="1">
 
         <TextView
             android:layout_width="match_parent"
@@ -35,9 +48,10 @@ android:layout_height="match_parent"
             android:text="Lakmal"
             android:id="@+id/user_name"
             android:layout_centerVertical="true"
-            android:textStyle="bold|italic"
             android:textColor="@color/black"
-            android:textSize="18sp"
+            android:textSize="14sp"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:layout_toLeftOf="@+id/perm_locations" />
 
         <ImageView
@@ -76,6 +90,14 @@ android:layout_height="match_parent"
             android:layout_marginRight="20dp" />
 
     </RelativeLayout>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@drawable/bottom_border"></FrameLayout>
+
+        </LinearLayout>
+  </FrameLayout>
+
 
 
 </LinearLayout>
