--- a/app/src/main/res/layout/my_message_layout.xml
+++ b/app/src/main/res/layout/my_message_layout.xml
@@ -66,5 +66,19 @@
                 android:layout_marginBottom="15dp" />
         </LinearLayout>
     </FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Delivered"
+            android:textColor="@color/black"
+            android:id="@+id/deleviered_message"
+            android:textSize="10dp"
+            android:gravity="left"
+            android:layout_marginLeft="5dp"
+            android:textStyle="italic" />
+    </FrameLayout>
 
 </LinearLayout>
