--- a/app/src/main/res/layout/my_photo_layout.xml
+++ b/app/src/main/res/layout/my_photo_layout.xml
@@ -1,70 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent"
-android:orientation="horizontal"
-android:background="@color/white"
-android:gravity="right">
-<FrameLayout
-    android:layout_width="10dp"
-    android:layout_height="match_parent"
-    android:background="@color/android_green"
-    android:layout_margin="5dp"></FrameLayout>
-<FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginBottom="5dp">
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/message_container"
-        android:padding="5dp"
-        android:layout_alignParentStart="false">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/play"
-            android:gravity="left"
-            android:src="@drawable/default_user"
-            android:scaleType="fitCenter"
-            android:background="@drawable/image_border"
-            android:adjustViewBounds="true" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lakmal Caldera"
-            android:id="@+id/sender"
-            android:layout_alignParentEnd="false"
-            android:layout_alignParentBottom="false"
-            android:textColor="@color/black"
-            android:textStyle="bold|italic"
-            android:textSize="15sp"
-            android:layout_alignLeft="@+id/play"
-            android:layout_below="@+id/play" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="11:00 AM"
-                android:id="@+id/sent_time"
-                android:layout_alignParentEnd="false"
-                android:layout_alignParentBottom="false"
-                android:textColor="@color/android_grey"
-                android:textStyle="italic"
-                android:textSize="9sp"
-                android:layout_alignLeft="@+id/play"
-                android:layout_below="@+id/sender" />
-        </LinearLayout>
-    </RelativeLayout>
-</FrameLayout>
-</LinearLayout>-->
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -132,6 +66,21 @@ android:gravity="right">
                 android:layout_marginRight="5dp"
                 android:layout_marginBottom="15dp" />
         </LinearLayout>
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Delivered"
+            android:textColor="@color/black"
+            android:id="@+id/deleviered_message"
+            android:textSize="10dp"
+            android:gravity="left"
+            android:layout_marginLeft="5dp"
+            android:textStyle="italic" />
     </FrameLayout>
 
 </LinearLayout>
