--- a/app/src/main/res/layout/not_my_message_layout.xml
+++ b/app/src/main/res/layout/not_my_message_layout.xml
@@ -1,65 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="horizontal"
-    android:background="@color/white"
-    android:gravity="right">
-    <FrameLayout
-        android:layout_width="10dp"
-        android:layout_height="match_parent"
-        android:background="@color/android_grey"
-        android:layout_margin="5dp"></FrameLayout>
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginBottom="5dp">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/message_container"
-            android:padding="10dp"
-            android:layout_alignParentStart="true">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Hi This is a message"
-                android:textColor="@color/black"
-                android:id="@+id/message"
-                android:textSize="15dp"
-                android:gravity="left" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Lakmal Caldera"
-                android:id="@+id/sender"
-                android:layout_alignParentEnd="false"
-                android:layout_alignParentBottom="false"
-                android:textColor="@color/black"
-                android:layout_below="@+id/message"
-                android:textStyle="bold|italic"
-                android:textSize="15dp"
-                android:layout_alignLeft="@+id/message" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="11:00 AM"
-                android:id="@+id/sent_time"
-                android:layout_alignParentEnd="false"
-                android:layout_alignParentBottom="false"
-                android:textColor="@color/android_grey"
-                android:textStyle="italic"
-                android:textSize="9sp"
-                android:layout_alignLeft="@+id/sender"
-                android:layout_below="@+id/sender" />
-
-        </RelativeLayout>
-    </FrameLayout>
-</LinearLayout>-->
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -131,6 +70,21 @@
 
             </FrameLayout>
         </LinearLayout>
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Delivered"
+            android:textColor="@color/black"
+            android:id="@+id/deleviered_message"
+            android:textSize="10dp"
+            android:textStyle="italic"
+            android:layout_marginRight="5dp"
+            android:gravity="right" />
     </FrameLayout>
 
 </LinearLayout>
