--- a/app/src/main/res/layout/not_my_sound_layout.xml
+++ b/app/src/main/res/layout/not_my_sound_layout.xml
@@ -1,91 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/white"
-    android:gravity="right"
-    android:orientation="horizontal">
-
-    <FrameLayout
-        android:layout_width="10dp"
-        android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:background="@color/android_grey"></FrameLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp">
-
-        <LinearLayout
-            android:id="@+id/message_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="5dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-
-
-                <ImageView
-                    android:id="@+id/play"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:adjustViewBounds="true"
-                    android:background="@drawable/image_border"
-                    android:cropToPadding="false"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/play_recording"
-                    android:padding="10dp" />
-
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/sender"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Lakmal Caldera"
-                        android:textColor="@color/black"
-                        android:textSize="15sp"
-                        android:textStyle="bold|italic" />
-
-                </FrameLayout>
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/sent_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignLeft="@+id/sender"
-                        android:layout_alignParentBottom="false"
-                        android:layout_alignParentEnd="false"
-                        android:layout_below="@+id/sender"
-                        android:text="11:00 AM"
-                        android:textColor="@color/android_grey"
-                        android:textSize="9sp"
-                        android:textStyle="italic" />
-                </FrameLayout>
-            </LinearLayout>
-
-        </LinearLayout>
-    </FrameLayout>
-</LinearLayout>-->
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -166,6 +79,21 @@
 
             </FrameLayout>
         </LinearLayout>
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Delivered"
+            android:textColor="@color/black"
+            android:id="@+id/deleviered_message"
+            android:textSize="10dp"
+            android:textStyle="italic"
+            android:layout_marginRight="5dp"
+            android:gravity="right" />
     </FrameLayout>
 
 </LinearLayout>
